[gd_scene load_steps=4 format=3 uid="uid://cgl30ut86d8od"]

[ext_resource type="Script" path="res://scripts/ui/menu_option.gd" id="1_ftqak"]
[ext_resource type="AudioStream" uid="uid://b2k84l6f45ip0" path="res://ressources/assets/audio/Electronic bip 3.wav" id="3_w4le7"]
[ext_resource type="Theme" uid="uid://duvsd7ylqvfdg" path="res://ressources/themes/default_theme.tres" id="6_mhknh"]

[node name="MenuOption" type="CanvasLayer"]
layer = 10
script = ExtResource("1_ftqak")
bus_name = "Master"

[node name="OptionsMenu" type="Control" parent="."]
texture_filter = 1
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="DarkBg" type="Panel" parent="OptionsMenu"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="OptionsMenu"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 160
theme_override_constants/margin_top = 60
theme_override_constants/margin_right = 160
theme_override_constants/margin_bottom = 110

[node name="HBoxContainer" type="VBoxContainer" parent="OptionsMenu/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 21

[node name="MenuPanel" type="Panel" parent="OptionsMenu/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource("6_mhknh")

[node name="HBoxContainer" type="HBoxContainer" parent="OptionsMenu/MarginContainer/HBoxContainer/MenuPanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -79.0
offset_top = -39.0
offset_right = 116.0
offset_bottom = 39.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="OptionsMenu/MarginContainer/HBoxContainer/MenuPanel/HBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="Label" type="Label" parent="OptionsMenu/MarginContainer/HBoxContainer/MenuPanel/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 10
text = "Fullscreen"

[node name="Label2" type="Label" parent="OptionsMenu/MarginContainer/HBoxContainer/MenuPanel/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 10
text = "Vsync"

[node name="Label3" type="Label" parent="OptionsMenu/MarginContainer/HBoxContainer/MenuPanel/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 10
text = "Volume"

[node name="VBoxContainer2" type="VBoxContainer" parent="OptionsMenu/MarginContainer/HBoxContainer/MenuPanel/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 2

[node name="FullscreenCheckBox" type="CheckBox" parent="OptionsMenu/MarginContainer/HBoxContainer/MenuPanel/HBoxContainer/VBoxContainer2"]
layout_mode = 2
size_flags_vertical = 10

[node name="VSyncCheckBox" type="CheckBox" parent="OptionsMenu/MarginContainer/HBoxContainer/MenuPanel/HBoxContainer/VBoxContainer2"]
layout_mode = 2
size_flags_vertical = 10

[node name="VolumeSlider" type="HSlider" parent="OptionsMenu/MarginContainer/HBoxContainer/MenuPanel/HBoxContainer/VBoxContainer2"]
layout_mode = 2
size_flags_vertical = 10
max_value = 1.0
step = 0.001
scrollable = false

[node name="VBoxContainer3" type="VBoxContainer" parent="OptionsMenu/MarginContainer/HBoxContainer/MenuPanel/HBoxContainer"]
layout_mode = 2
size_flags_vertical = 8

[node name="VolumeIndicator" type="Label" parent="OptionsMenu/MarginContainer/HBoxContainer/MenuPanel/HBoxContainer/VBoxContainer3"]
layout_mode = 2
text = "0%"

[node name="Button" type="Button" parent="OptionsMenu/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme = ExtResource("6_mhknh")
text = "Done"

[node name="HoverButtonAudio" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_w4le7")
volume_db = -25.0
pitch_scale = 0.7

[connection signal="visibility_changed" from="." to="." method="_on_visibility_changed"]
[connection signal="toggled" from="OptionsMenu/MarginContainer/HBoxContainer/MenuPanel/HBoxContainer/VBoxContainer2/FullscreenCheckBox" to="." method="_on_fullscreen_check_box_toggled"]
[connection signal="pressed" from="OptionsMenu/MarginContainer/HBoxContainer/MenuPanel/HBoxContainer/VBoxContainer2/VSyncCheckBox" to="." method="_on_v_sync_check_box_pressed"]
[connection signal="value_changed" from="OptionsMenu/MarginContainer/HBoxContainer/MenuPanel/HBoxContainer/VBoxContainer2/VolumeSlider" to="." method="_on_volume_slider_value_changed"]
[connection signal="mouse_entered" from="OptionsMenu/MarginContainer/HBoxContainer/Button" to="." method="_mouse_entered"]
[connection signal="pressed" from="OptionsMenu/MarginContainer/HBoxContainer/Button" to="." method="_on_button_pressed"]
